# temporal-order-management-demo

./: .gitignore  .tool-versions  README.md  go.mod  go.sum  setcloudenv.example
activities/: ChargeCustomer.go  ChargeCustomerAPIFailure.go  ChargeCustomerNonRecoverableFailure.go  ChargeCustomerUnrecoverableFailure.go  CheckFraud.go  GetItems.go  OrderManagementActivities.go  PrepareShipment.go  ShipOrder.go
dotnet/: .gitignore  DotNetOrderManagement.sln  README.md  startcloudworker.sh  startlocalworker.sh
go/: README.md  go.mod  go.sum  startcloudworker.sh  startcloudworker_nexus.sh  startlocalworker.sh  startlocalworker_nexus.sh
java/: README.md  build.gradle  env-sample.sh  settings.gradle  startcloudworker.sh  startcloudworker_nexus.sh  startlocalworker.sh  startlocalworker_nexus.sh
python/: README.md  activities.py  order_workflow.py  order_workflow_scenarios.py  pyproject.toml  shared_objects.py  shipping_child_workflow.py  startcloudworker.sh  startlocalworker.sh  worker.py  workflows.py
resources/: query.go  signal.go  struct.go  timer.go  update.go
ruby/: Gemfile  README.md  shared_objects.rb  startcloudworker.sh  startlocalworker.sh  worker.rb
typescript/: .gitignore  README.md  package-lock.json  package.json  startcloudworker.sh  startlocalworker.sh  tsconfig.json
ui/: app.py  client.py  data.py  pyproject.toml  startcloudwebui.sh  startlocalwebui.sh  starttemporalserver.sh
ui/static/: dark-mode.css  style.css
ui/templates/: base.html  index.html  order_confirmation.html  process_order.html
worker/: main.go
workflows/: OrderManagementWorkflow.go  (+11 more)
(+140 files in other folders)
