[tool.poetry]
name = "order-management-app-python-backend"
version = "0.1.0"
description = "Python Backend for Simple Order Management App"
authors = ["Sean Sullivan <seantsullivan04@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.encryption]
optional = true
dependencies = { cryptography = "^38.0.1", aiohttp = "^3.8.1" }

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
temporalio = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
