[tool.poetry]
name = "order-management-app"
version = "0.1.0"
description = "Simple Order Management App"
authors = ["Keith Tenzer <keith.tenzer@temporal.io>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = { extras = ["async"], version = "^2.2.3" }
stripe = "^2.76.0"
openai = "^0.27.7"

[tool.poetry.group.encryption]
optional = true
dependencies = { cryptography = "^38.0.1", aiohttp = "^3.8.1" }

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
temporalio = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
